crates/sparrow-arrow/src/snapshots/sparrow_arrow__attachments__tests__batch_format.snap
---
source: crates/sparrow-arrow/src/attachments.rs
expression: annotation
---
Record Batch: test batch
{"a":0}
{"a":1,"b":1}
{"a":2,"b":8}

