crates/sparrow-arrow/src/snapshots/sparrow_arrow__attachments__tests__long_batch_format.snap
---
source: crates/sparrow-arrow/src/attachments.rs
expression: annotation
---
Record Batch: test batch
{"a":0}
{"a":1,"b":1}
... 6 extra rows...
{"a":7,"b":8}
{"a":8,"b":9}

