crates/sparrow-arrow/src/snapshots/sparrow_arrow__attachments__tests__schema_format.snap
---
source: crates/sparrow-arrow/src/attachments.rs
expression: annotation
---
Schema: test schema

  Field: 'a' (non-nullable) = Int32
  Field: 'b' = Utf8

